
(env
 (dev
  (flags
   (:standard -w A-30))
  (ocamlopt_flags
   (-g -Oclassic)))
 (release
  (flags
   (:standard -w A-30))
  (ocamlopt_flags (-O3))))

(rule
 (targets libffi_ocaml.a)
 (mode fallback)
 (locks /cargo)
 (action
  (progn
   (run cargo build --release)
   (run cp ../../target/release/libffi_ocaml.a libffi_ocaml.a))))

(library
 (name errpy)
 (modules parser ast)
 (public_name errpy)
 (flags -linkall)
 (preprocess
  (pps ppx_deriving.show))
 (libraries ocamlpool)
 (c_library_flags -lstdc++ -lpthread)
 (no_dynlink)
 (foreign_archives ffi_ocaml))

(executable
 (name parse_and_print)
 (modules parse_and_print)
 (libraries errpy))
